Merged w/ 1.3